redis-id.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-id
  labels:
    app: redis-id
spec:
  template:
    metadata:
      labels:
        app: redis-id
    spec:
      containers:
        - name: redis
          image: redis:8.4.0
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
  selector:
    matchLabels:
      app: redis-id
  replicas: 1
