app-id-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-id
spec:
  type: ClusterIP
  selector:
    app: app-id
  ports:
    - port: 80
      targetPort: 80
