mongo-id-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-id
spec:
  type: ClusterIP
  selector:
    app: mongo-id
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo-id
