redis-id-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-id
spec:
  type: ClusterIP
  selector:
    app: redis-id
  ports:
    - port: 6379
      targetPort: 6379
      name: redis-id
